syntax = "proto3";

package io.github.tobia80;


message EndpointResponse {
  repeated string ids = 1;
}

message GetEndpointsRequest {
}

message GetExpirationTableRequest {
}

message ExpireElementRequest {
  string id = 1;
  string name = 2;
  uint64 expireAt = 3;
}
message ExpireElementResponse {}

message SetElementRequest {
  string id = 1;
  string name = 2;
  bytes value = 3;
  optional uint64 expireAt = 4;
}
message SetElementResponse {}
message SetElementIfNotExistRequest {
  string id = 1;
  string name = 2;
  bytes value = 3;
  optional uint64 expireAt = 4;
}
message SetElementIfNotExistResponse {
  bool created = 1;
}
message GetElementRequest {
  string id = 1;
  string name = 2;
}
message GetElementResponse {
  optional bytes value = 1;
}
message DeleteElementRequest {
  string id = 1;
  string name = 2;
}
message DeleteElementResponse {}

message SendCommandRequest {
  string id = 1;
  bytes payload = 2;
}

message SendCommandResponse {
}



service DRefRaft {

  rpc SetElement(SetElementRequest) returns (SetElementResponse) {}
  rpc ExpireElement(ExpireElementRequest) returns (ExpireElementResponse) {}
  rpc SetElementIfNotExist(SetElementIfNotExistRequest) returns (SetElementIfNotExistResponse) {}
  rpc GetElement(GetElementRequest) returns (GetElementResponse) {}
  rpc DeleteElement(DeleteElementRequest) returns (DeleteElementResponse) {}

  rpc GetEndpoints(GetEndpointsRequest) returns (EndpointResponse) {}

  rpc SendCommand(SendCommandRequest) returns (SendCommandResponse) {}

}
